// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add ti for a  mandataire 1`] = `
Object {
  "id": 7,
  "ti_id": 1,
  "user_id": 1,
}
`;

exports[`should add ti for a service 1`] = `
Object {
  "id": 1,
  "mandataire_id": 1,
  "ti_id": 1,
}
`;

exports[`should register with good values 1`] = `
Object {
  "id": 7,
  "ti_id": 1,
  "user_id": 1,
}
`;

exports[`should register with good values 2`] = `
Object {
  "id": 1,
  "mandataire_id": 1,
  "ti_id": 1,
}
`;
